<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:background="@mipmap/abc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.roline.jumbled_game.MainActivity">

    <Button
        android:text="@string/Play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:textSize="30sp"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#000000"
        android:layout_marginTop="112dp"
        android:background="@drawable/colorbutton"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/HighScores"
        android:textColor="#FFFFFF"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:id="@+id/textView2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />

    <Button
        android:text="@string/exit"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:textSize="30sp"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#000000"


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:background="@drawable/colorbutton"
        android:id="@+id/button4"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="TextView"
        android:textColor="#faccfa"
        android:textSize="35sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/times"
        android:layout_alignParentTop="true"

        android:layout_centerHorizontal="true" />

</RelativeLayout>
